# lattice_zk

./: Cargo.toml  bench_gkr_pcs.csv  mle_pc.md  perf_gkr_compare.csv  perf_gkr_lattice.csv  perf_gkr_lattice_all.csv  perf_tmp.csv  wget-log
arith/mersenne31/src/: m31_ext3.rs
arith/src/: bn254.rs  bn254xn.rs
config_macros/src/: lib.rs
docs/: LATTICE_PC_PERF_ANALYSIS.md  PERF_REPORT_GKR_LATTICE.md  PERF_REPORT_GKR_RAW_VS_LATTICE.md  TESTING.md  old_compare.md  old_test.md  virgo_expander_manual_conversion.md
expander/: .gitignore  README.md  go.mod  go.sum
expander/internal/: fields.go  lanczos.go  matmul.go  merkle.go  pixels.go  serialize.go
gkr/: Cargo.toml
gkr/benches/: gkr_hashes.rs
gkr/src/: utils.rs
lattice_poly_commit/: Cargo.toml
lattice_poly_commit/src/: ajtai.rs  encoder.rs  expander_api.rs  lib.rs  multilinear.rs  params.rs  sampler.rs  univariate.rs  univariate_real.rs
lattice_poly_commit/src/ring/: mod.rs  ntt.rs  poly.rs
lattice_poly_commit/tests/: test_mle_real.rs  test_univariate_real.rs
results/: figure1.py  figure2.py  figure3.py  figure_example.py  lattiswift.md  lattiswift_para.md  libra.md  virgo_matmul_all_official_sizes.csv  virgo_matmul_windows.csv  virgo_new_data_attempt.csv
scripts/: bench_gkr_pcs.ps1  build_virgo.ps1  build_virgo.sh  perf_all.ps1  perf_gkr_lattice.ps1  run_lattiswift.ps1  run_lattiswift_matmul.ps1  run_libra.ps1  run_libra_matmul.ps1  run_virgo.ps1  run_virgo.sh  run_virgo_e2e.ps1  run_virgo_e2e.sh  run_virgo_matmul.ps1  setup_env_win.ps1
tools/expander_to_virgo/: Cargo.toml  main.rs
(+5 files in other folders)
